# SummarizeTelegramGroup

./: .gitignore  AGENTS.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml  telegram_groups_consolidated_summary_2026-03-28.md  user_guide.md
config/: daily_digest_targets.example.json
docs/: architecture.md  forum_support_specification.md  operations.md  prompts.md  specification.md  telegram-bot-channel-delivery-spec.md
prompts/: agent_harness.md  openclaw_daily_digest_cron.md
scripts/: _bootstrap.py  auth_telegram.py  build_consolidated_digest.py  build_report_prompt.py  collect_digest_context.py  collect_messages.py  finalize_run.py  migrate_report_layout.py  prepare_report_context.py  prepare_summary_input.py  purge_old_runs.py  send_markdown_report.py  store_report.py
src/telegram_group_summarizer/: __init__.py  collection.py  config.py  consolidation.py  db.py  digest_config.py  digest_orchestration.py  finalization.py  logging_utils.py  models.py  report_context.py  report_delivery.py  report_layout.py  report_prompt.py  reports.py  summary_input.py  telethon_client.py
src/telegram_group_summarizer/migrations/: 0001_initial.sql  0002_forum_support.sql
tests/: test_collection_normalization.py  test_config.py  test_consolidation.py  test_db.py  test_digest_config.py  test_digest_orchestration.py  test_finalization.py  test_integration_flow.py  test_prepare_summary_input.py  test_report_context.py  test_report_delivery.py  test_report_layout.py  test_report_prompt.py  test_script_entrypoints.py  test_telethon_client.py
