[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-group-summarizer"
version = "0.1.0"
description = "Local automation-friendly Telegram group summarization pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
telegram = ["Telethon>=1.34,<2"]
dev = ["pytest>=8,<9", "ruff>=0.11,<0.12"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
telegram_group_summarizer = ["migrations/*.sql"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
